<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView_logo_sign_up"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="239dp"
        android:layout_marginRight="239dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/ic_sign_in_logo"
        app:layout_constraintBottom_toTopOf="@+id/editTextLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton_back_to_main"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView_sign_up_title"
        android:layout_width="174dp"
        android:layout_height="39dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="477dp"
        android:gravity="center"
        android:text="@string/textview_sign_up_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_in_from_sign_up_activity"
        app:layout_constraintStart_toStartOf="@+id/imageView_logo_sign_up"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_sign_up_description"
        android:layout_width="320dp"
        android:layout_height="98dp"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:text="@string/textview_sign_up_description"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_up_create_account"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_up_create_account"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/button_sign_up_create_account"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="25dp"
        android:text="@string/button_sign_up_create_account"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_in_from_sign_up_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sign_up_description" />

    <Button
        android:id="@+id/button_sign_in_from_sign_up_activity"
        android:layout_width="276dp"
        android:layout_height="50dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="36dp"
        android:text="@string/button_sign_in_from_sign_up_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_back_to_main" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="7dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_sign_up_login"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo_sign_up" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_sign_up_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_sign_up_phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="@+id/editTextLogin"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_sign_up_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView_sign_up_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <ImageButton
        android:id="@+id/imageButton_back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="513dp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_in_from_sign_up_activity"
        app:layout_constraintEnd_toStartOf="@+id/imageView_logo_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="@string/imageButton_sign_up_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>